# screwdriver

./: .clangd  .gitignore  .gitmodules  000010_orders.csv  000010_ticks.csv  2026-01-11-ultrathinktestdata603122-ssel2tick20251.txt  2026-01-17-implement-the-following-plan.txt  2026-01-18-persistence.txt  2026-01-18-日志大小分析.txt  603323_orders.csv  ALLSYMBOLS.csv  CMakeLists.txt  TODO  backtest_results_20260123.txt  backtest_tasks.txt  build.sh  deploy.sh  docker-build.sh  log_biz_20260122.txt  new_sharding_plan.md  run.sh  run_backtest.py  signals_20260123.csv  signals_20260123_delay_ge5s.csv  signals_20260123_delay_lt5s.csv  signals_20260123_symbols_filtered.txt  signals_20260126.csv  signals_20260126_symbols_filtered.txt  split_tick_data.py  test_fastorderbook.cpp  test_logger.cpp  verify_split.py  xlsx_to_replayer_format.py  提取所有字段.txt  测试代码热突破.txt
.claude/: CLAUDE.md
.claude/skills/add-strategy/: SKILL.md
.claude/skills/backtest/: SKILL.md
bug-report/: FastOrderBook_TickSize.txt
business/: 打板策略_dealer侧规则.txt  打板策略_engine侧规则.txt  打板策略业务规则.txt  打板策略业务规则_codex修改.txt
config/: backtest.conf  engine.conf  htsc-insight-cpp-config.conf  live.conf  strategy_backtest.conf  strategy_live.conf  strategy_live_dealer2.conf  strategy_live_dealer3.conf  strategy_live_dealer4.conf
doc/: LimitUpBreakSellStrategy.md  README_TEST.md  architecture_refactoring.md  backtest_guide.md  data_cleaning.md  deployment_guide.md  fastorderbook_best_ask_bugfix.md  limit_up_break_analysis.md  logger.md  mmap_to_clickhouse.md  orderbook_testing_guide.md  performance_optimizations.md  testing_guide.md  沪深市场状态.txt  策略配置文件.md
doc/bug-report/: StrategyEngine.txt  shanghai_out_of_order_fix.md
doc/prompts/: 2026-01-11-ultrathinkquilldebuginfowar.txt
doc/work-report/: 0112.txt
docs/: deployment_checklist.md  live_mode_config_improvement.md  order-ack-dealer-design.md  order-ack-design.md  order-ack-engine-coding.md  order-ack-engine-design.md  refactoring_strategy_ownership.md  refactoring_summary.md  segfault_fix.md  strategy_lifecycle_design_issues.md
docs/issue#4-接刀策略/: implementation_list.md  业务规则.md
include/: backtest_adapter.h  backtest_config.h  breakout_detector.h  hft_logger.h  history_data_replayer.h  live_market_adapter.h  logger.h  market_data_enums.h  market_data_structs.h  market_data_structs_aligned.h  mmap_writer.h  persist_layer.h  strategy_base.h  strategy_context.h  strategy_engine.h  strategy_factory.h  strategy_ids.h  symbol_utils.h  trade_signal.h  zmq_client.h  zmq_protocol.h
script/: add_daban_to_configs.sh  add_strategy.py  analyze_channel_no.py  analyze_channel_timing.py  batch_backtest.py  batch_download_data.py  batch_export_server.py  clean_data.py  cleanup_old_data.sh  compare_backtest.py  compare_structs.py  create_clickhouse_tables.sql  create_clickhouse_tables_user.sql  create_clickhouse_tables_v2.sql  download_and_parse_signals.py  download_clickhouse.py  download_market_data.sh  download_mmap_data.py  download_mmap_data_v2.py  import_mmap_fast.sh  import_mmap_to_clickhouse.py  import_to_clickhouse.py  import_to_clickhouse.sh  mock_zmq_router.py  read_mmap.py  read_mmap_usage.txt  read_mmap_v2.py  read_snapshot.py  replayer_format_to_xlsx.py  run_backtest_server.sh  run_strategy_backtest.py  run_strategy_backtest_clickhouse.py  simulate_orderbook.py  split_GTA_tick_data.py  split_signals_by_delay.py  verify_clickhouse_schema.py  verify_data_integrity.sh  verify_order_offset.py  verify_orderbook_local.sh  verify_orderbook_rebuild.sh  (+1 more)
src/: FastOrderBook.cpp  FastOrderBook.h  ObjectPool.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  PriceLevel.cpp  PriceLevel.h  PriceLevelVolumeStrategy.h  TestStrategy.h  Trade.cpp  Trade.h  logger_example.cc  main.cc  main.cpp  mmap_to_clickhouse.cpp  strategy_base.cpp  strategy_context.cpp
src/strategy/: BreakoutPriceVolumeStrategy.h  BreakoutPriceVolumeStrategy_v2.h  DabanStrategy.h  GapUpVolumeBreakoutStrategy.h  HenggouStrategy.h  HotHenggouStrategy.h  LimitUpBreakSellStrategy.h  OpeningRangeBreakoutStrategy.h  PercentageGainBreakoutStrategy.h  PriceLevelVolumeStrategy.h  PrintStrategy.h  TestOrderbookStrategy.h  TestStrategy.h
src/utils/: limit_up_flow_detector.h  price_util.h  symbol_utils.h  time_util.h
test/: test_daban_engine_state.cpp  test_data_order.cpp  test_for_each_bid_order_at_price.cpp  test_hash_shard.cpp  test_limit_up_break.py  test_limit_up_break_auto.py  test_limit_up_break_multi.py  test_logger.cpp  test_price_level_strategy.cpp  test_queue_debug.cpp  test_strategy.cpp  test_strategy_debug.cpp  test_strategy_lifecycle.cpp  test_strategy_simple.cpp  test_time_util.cpp  test_transaction_order.cpp  verify_orderbook.cpp
test/utils/: limit_up_flow_detector.h
test_data/: MD_ORDER_StockType_600794.SH.csv  MD_TRANSACTION_StockType_600794.SH.csv
test_data_cleaned/: MD_ORDER_StockType_002603.SZ.xlsx  MD_ORDER_StockType_600794.SH.xlsx  MD_ORDER_StockType_603122.SH.xlsx  MD_TRANSACTION_StockType_002603.SZ.xlsx  MD_TRANSACTION_StockType_600794.SH.xlsx  MD_TRANSACTION_StockType_603122.SH.xlsx
worknote/20260116/: e1.txt  e2.txt  e3.txt  o1.txt  o2.txt  o3.txt
worknote/20260118/: note
